some css cleaning

--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
             </nav>
 
             <main>
-                <div id="content-wrapper">
-                    <div class="h1-wrapper" id="home-h1-wrapper">
+                <div id="main-wrapper">
+                    <div class="h1-wrapper" id="home-h1-extra-margin">
                         <img id="h-decoration" src="images/h-decoration.png" title="title-decoration" alt="title-decoration">
                         <h1 id="page-title">Dana Therapy</h1><p class=”clear”></p>
                     </div>
-                    <img id="cover-photo" src="images/cover.png" title="cover" alt="cover">
-                    <section id="discover-section" class="main-section-top-margin">
+                    <img id="cover-photo" src="images/cover.png" title="cover-dog-therapy" alt="cover-dog-therapy">
+                    <section id="main-section" class="main-section-top-margin">
+                        <!-- id="discover-section" class="main-section-top-margin" -->
                         <h2>Virtual healthcare for you</h2>
-                        <p id="content-p">Dana Therapy provides progressive, and affordable <br> 
+                        <p id="main-section-p">Dana Therapy provides progressive, and affordable <br> 
                             healthcare, accessible on mobile and online <br>
                             for everyone
                         </p>
-                        <a href="#" class="dana-button" id="consult-button">Consult today</a>
+                        <a href="#" class="custom-button" id="filled-button">Consult today</a>
                     </section>
                 </div>
 
@@ -45,37 +46,48 @@
                     <div class="services-flex-wrapper">
                         <a href="#">
                             <section class="services-flex-content">
-                                <img src="./images/search.png" title="search-icon" alt="search-icon"><h3>Search doctor</h3><p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+                                <img src="./images/search.png" title="search-icon" alt="search-icon">
+                                <h3>Search doctor</h3>
+                                <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
                             </section>
                         </a>
                         <a href="#">
                             <section class="services-flex-content">
-                                <img src="./images/pharmacy.png" title="pharmacy-icon" alt="pharmacy-icon"><h3>Online pharmacy</h3><p>Buy your medicines with our mobile application with a simple delivery system</p>
+                                <img src="./images/pharmacy.png" title="pharmacy-icon" alt="pharmacy-icon">
+                                <h3>Online pharmacy</h3>
+                                <p>Buy your medicines with our mobile application with a simple delivery system</p>
                             </section>
                         </a>
                         <a href="#">
                             <section class="services-flex-content">
-                                <img src="./images/consult.png" title="consult-icon" alt="consult-icon"><h3>Consultation</h3><p>Free consultation with our trusted doctors and get the best recomendations</p>
+                                <img src="./images/consult.png" title="consult-icon" alt="consult-icon">
+                                <h3>Consultation</h3>
+                                <p>Free consultation with our trusted doctors and get the best recomendations</p>
                             </section>
                         </a>
                         <a href="#">
                             <section class="services-flex-content">
-                                <img src="./images/details.png" title="details-icon" alt="details-icon"><h3>Details info</h3><p>Free consultation with our trusted doctors and get the best recomendations</p>
+                                <img src="./images/details.png" title="details-icon" alt="details-icon">
+                                <h3>Details info</h3>
+                                <p>Free consultation with our trusted doctors and get the best recomendations</p>
                             </section>
                         </a>
                         <a href="#">
                             <section class="services-flex-content">
-                                <img src="./images/emergency.png" title="emergency-icon" alt="emergency-icon"><h3>Emergency care</h3><p>You can get 24/7 urgent care for yourself or your children and your
-                                    lovely family</p>
+                                <img src="./images/emergency.png" title="emergency-icon" alt="emergency-icon">
+                                <h3>Emergency care</h3>
+                                <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
                             </section>
                         </a>
                         <a href="#">
                             <section class="services-flex-content">
-                                <img src="./images/tracking.png" title="tracking-icon" alt="tracking-icon"><h3>Tracking</h3><p>Track and save your medical history and health data </p>
+                                <img src="./images/tracking.png" title="tracking-icon" alt="tracking-icon">
+                                <h3>Tracking</h3>
+                                <p>Track and save your medical history and health data </p>
                             </section>
                         </a>
                     </div>
-                    <a href="#" class="dana-button" id="learn-button">Learn more</a>
+                    <a href="#" class="custom-button" id="unfilled-button">Learn more</a>
                 </section>
             </main>
         </div>
