--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -84,7 +84,7 @@
                             </div>
                         </article>
                     </div>
-                    <a href="#" class="dana-button" id="learn-button">View all</a>
+                    <a href="#" class="custom-button" id="unfilled-button">View all</a>
                 </section>
             </main>
         </div>
