--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 		<title>Dan Dohovic - Ex2 </title>
 	</head>
     <body>  
-        <div id="wrapper">
-            <header>
-                <a href="index.html" id="logo"></a>
-            </header>
 
+        <header>
+            <a href="index.html" id="logo"></a>
             <nav id="top-nav">
                 <a id="current-page" href="#">Home</a>
                 <a href="#">Find a doctor</a>
@@ -20,80 +18,79 @@
                 <a href="/testimonials/testimonials.html">Testimonials</a>
                 <a href="#">About us</a>
             </nav>
+        </header>
 
-            <main>
-                <div id="main-wrapper">
-                    <div class="h1-wrapper" id="home-h1-extra-margin">
-                        <img id="h-decoration" src="images/h-decoration.png" title="title-decoration" alt="title-decoration">
-                        <h1 id="page-title">Dana Therapy</h1><p class=”clear”></p>
-                    </div>
-                    <img id="cover-photo" src="images/cover.png" title="cover-dog-therapy" alt="cover-dog-therapy">
-                    <section id="main-section" class="main-section-top-margin">
-                        <!-- id="discover-section" class="main-section-top-margin" -->
-                        <h2>Virtual healthcare for you</h2>
-                        <p id="main-section-p">Dana Therapy provides progressive, and affordable <br> 
-                            healthcare, accessible on mobile and online <br>
-                            for everyone
-                        </p>
-                        <a href="#" class="custom-button" id="filled-button">Consult today</a>
-                    </section>
+        <main>
+            <div id="main-wrapper">
+                <div class="h1-wrapper" id="home-h1-extra-margin">
+                    <img id="h-decoration" src="images/h-decoration.png" title="title-decoration" alt="title-decoration">
+                    <h1 id="page-title">Dana Therapy</h1><p class=”clear”></p>
                 </div>
-
-                <section id="services-section">
-                    <h2>Our services</h2>
-                    <div id="underline-black" class="underline-break"></div>
-                    <p id="service-p">We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
-                    <div class="services-flex-wrapper">
-                        <a href="#">
-                            <section class="services-flex-content">
-                                <img src="./images/search.png" title="search-icon" alt="search-icon">
-                                <h3>Search doctor</h3>
-                                <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
-                            </section>
-                        </a>
-                        <a href="#">
-                            <section class="services-flex-content">
-                                <img src="./images/pharmacy.png" title="pharmacy-icon" alt="pharmacy-icon">
-                                <h3>Online pharmacy</h3>
-                                <p>Buy your medicines with our mobile application with a simple delivery system</p>
-                            </section>
-                        </a>
-                        <a href="#">
-                            <section class="services-flex-content">
-                                <img src="./images/consult.png" title="consult-icon" alt="consult-icon">
-                                <h3>Consultation</h3>
-                                <p>Free consultation with our trusted doctors and get the best recomendations</p>
-                            </section>
-                        </a>
-                        <a href="#">
-                            <section class="services-flex-content">
-                                <img src="./images/details.png" title="details-icon" alt="details-icon">
-                                <h3>Details info</h3>
-                                <p>Free consultation with our trusted doctors and get the best recomendations</p>
-                            </section>
-                        </a>
-                        <a href="#">
-                            <section class="services-flex-content">
-                                <img src="./images/emergency.png" title="emergency-icon" alt="emergency-icon">
-                                <h3>Emergency care</h3>
-                                <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
-                            </section>
-                        </a>
-                        <a href="#">
-                            <section class="services-flex-content">
-                                <img src="./images/tracking.png" title="tracking-icon" alt="tracking-icon">
-                                <h3>Tracking</h3>
-                                <p>Track and save your medical history and health data </p>
-                            </section>
-                        </a>
-                    </div>
-                    <a href="#" class="custom-button" id="unfilled-button">Learn more</a>
+                <img id="cover-photo" src="images/cover.png" title="cover-dog-therapy" alt="cover-dog-therapy">
+                <section class="main-section">
+                    <h2>Virtual healthcare for you</h2>
+                    <p>Dana Therapy provides progressive, and affordable <br> 
+                        healthcare, accessible on mobile and online <br>
+                        for everyone
+                    </p>
+                    <a href="#" class="custom-button" id="filled-button">Consult today</a>
                 </section>
-            </main>
-        </div>
+            </div>
+
+            <section class="services-section">
+                <h2>Our services</h2>
+                <div class="underline-break" id="underline-black"></div>
+                <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+                <div class="services-flex-wrapper">
+                    <a href="#">
+                        <section class="services-flex-content">
+                            <img src="./images/search.png" title="search-icon" alt="search-icon">
+                            <h3>Search doctor</h3>
+                            <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+                        </section>
+                    </a>
+                    <a href="#">
+                        <section class="services-flex-content">
+                            <img src="./images/pharmacy.png" title="pharmacy-icon" alt="pharmacy-icon">
+                            <h3>Online pharmacy</h3>
+                            <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                        </section>
+                    </a>
+                    <a href="#">
+                        <section class="services-flex-content">
+                            <img src="./images/consult.png" title="consult-icon" alt="consult-icon">
+                            <h3>Consultation</h3>
+                            <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                        </section>
+                    </a>
+                    <a href="#">
+                        <section class="services-flex-content">
+                            <img src="./images/details.png" title="details-icon" alt="details-icon">
+                            <h3>Details info</h3>
+                            <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                        </section>
+                    </a>
+                    <a href="#">
+                        <section class="services-flex-content">
+                            <img src="./images/emergency.png" title="emergency-icon" alt="emergency-icon">
+                            <h3>Emergency care</h3>
+                            <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
+                        </section>
+                    </a>
+                    <a href="#">
+                        <section class="services-flex-content">
+                            <img src="./images/tracking.png" title="tracking-icon" alt="tracking-icon">
+                            <h3>Tracking</h3>
+                            <p>Track and save your medical history and health data </p>
+                        </section>
+                    </a>
+                </div>
+                <a href="#" class="custom-button" id="unfilled-button">Learn more</a>
+            </section>
+        </main>
 
         <footer id="home-footer">
-            <section id="footer-social-section">
+            <section class="footer-social-section">
                 <nav id="footer-nav">
                     <a href="https://www.facebook.com/danacapm">FB</a>
                     <a href="https://www.instagram.com/danapetherapy/">Insta</a>
