--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -7,13 +7,10 @@
 		<link rel="icon" href="favicon.ico?v=2"/>
 		<title>Dan Dohovic - Ex2 </title>
 	</head>
-    <body>  
-        <div id="wrapper">
-            <header>
-                <a href="index.html" id="logo">
-                </a>
-            </header>
-
+    <body>        
+        <header>
+            <a href="index.html" id="logo">
+            </a>
             <nav id="top-nav">
                 <a href="../index.html">Home</a>
                 <a href="#">Find a doctor</a>
@@ -21,76 +18,76 @@
                 <a id="current-page" href="#">Testimonials</a>
                 <a href="#">About us</a>
             </nav>
+        </header>
 
-            <main>
-                <div class="h1-wrapper">
-                    <img id="h-decoration" src="../images/h-decoration.png" title="title-decoration" alt="title-decoration">
-                    <h1 id="page-title">Testimonials</h1><p class=”clear”></p>
+        <main>
+            <div class="h1-wrapper">
+                <img id="h-decoration" src="../images/h-decoration.png" title="title-decoration" alt="title-decoration">
+                <h1 id="page-title">Testimonials</h1><p class=”clear”></p>
+            </div>
+            <section class="testimonial-block-section">
+                <div class="testimonial-block-content">
+                    <h2>What our customer are saying</h2>
+                    <div id="underline-white" class="underline-break"></div>
+                    <p>“Our dedicated patient engagement app and 
+                        web portal allow you to access information instantaneously (no tedeous form, long calls, 
+                        or administrative hassle) and securely”
+                    </p>
+                    <img src="images/profile-elipse.png" title="user-profile-picture" alt="user-profile-picture">
+                    <h3>Edward Newgate</h3>
+                    <h4>Founder Circle</h4>
                 </div>
-                <section class="testimonial-block-section">
-                    <div class="testimonial-block-content">
-                        <h2>What our customer are saying</h2>
-                        <div id="underline-white" class="underline-break"></div>
-                        <p>“Our dedicated patient engagement app and 
-                            web portal allow you to access information instantaneously (no tedeous form, long calls, 
-                            or administrative hassle) and securely”
-                        </p>
-                        <img src="images/profile-elipse.png" title="user-profile-picture" alt="user-profile-picture">
-                        <h3>Edward Newgate</h3>
-                        <h4>Founder Circle</h4>
-                    </div>
-                </section>
+            </section>
 
-                <section id="latest-articles-section" class="main-section-top-margin">
-                    <h2>Check out our latest article</h2>
-                    <div class="article-flex-wrapper">
-                        <article class="article-flex-content">
-                            <img src="./images/article1.png" id="article-img" title="person-getting-vaccinated" alt="person-getting-vaccinated">
-                            <div id="article-padding">
-                                <h3>Disease detection, check up in the laboratory</h3>
-                                <p>In this case, the role of the health laboratory is very important to do <br>
-                                    a disease detection...
-                                </p>
-                                <a href="#">
-                                    <div>Read more</div>
-                                    <img src="./images/right-arrow.png" title="right-pointing-arrow" alt="right-pointing-arrow">
-                                </a>
-                            </div>
-                        </article>
-                        <article class="article-flex-content">
-                            <img src="./images/article2.png" id="article-img" title="scientist-does-science" alt="scientist-does-science">
-                            <div id="article-padding">
-                                <h3>Herbal medicines that are safe for consumption</h3>
-                                <p>Herbal medicine is very widely used at this time 
-                                    because of its very good for your health...
-                                </p>
-                                <a href="#">
-                                    <div>Read more</div>
-                                    <img src="./images/right-arrow.png" title="right-pointing-arrow" alt="right-pointing-arrow">
-                                </a>
-                            </div>
-                        </article>
-                        <article class="article-flex-content">
-                            <img src="./images/article3.png" id="article-img" title="relaxed-person-wears-facial-mask" alt="relaxed-person-wears-facial-mask">
-                            <div id="article-padding">
-                                <h3>Natural care for healthy facial skin</h3>
-                                <p>A healthy lifestyle should start from now and also for your skin health.
-                                    There are some...
-                                </p>
-                                <a href="#">
-                                    <div>Read more</div>
-                                    <img src="./images/right-arrow.png" title="right-pointing-arrow" alt="right-pointing-arrow">
-                                </a>
-                            </div>
-                        </article>
-                    </div>
-                    <a href="#" class="custom-button" id="unfilled-button">View all</a>
-                </section>
-            </main>
-        </div>
-
+            <section id="latest-articles-section" class="main-section-top-margin">
+                <h2>Check out our latest article</h2>
+                <div class="article-flex-wrapper">
+                    <article class="article-flex-content">
+                        <img src="./images/article1.png" id="article-img" title="person-getting-vaccinated" alt="person-getting-vaccinated">
+                        <div id="article-padding">
+                            <h3>Disease detection, check up in the laboratory</h3>
+                            <p>In this case, the role of the health laboratory is very important to do <br>
+                                a disease detection...
+                            </p>
+                            <a href="#">
+                                <div>Read more</div>
+                                <img src="./images/right-arrow.png" title="right-pointing-arrow" alt="right-pointing-arrow">
+                            </a>
+                        </div>
+                    </article>
+                    <article class="article-flex-content">
+                        <img src="./images/article2.png" id="article-img" title="scientist-does-science" alt="scientist-does-science">
+                        <div id="article-padding">
+                            <h3>Herbal medicines that are safe for consumption</h3>
+                            <p>Herbal medicine is very widely used at this time 
+                                because of its very good for your health...
+                            </p>
+                            <a href="#">
+                                <div>Read more</div>
+                                <img src="./images/right-arrow.png" title="right-pointing-arrow" alt="right-pointing-arrow">
+                            </a>
+                        </div>
+                    </article>
+                    <article class="article-flex-content">
+                        <img src="./images/article3.png" id="article-img" title="relaxed-person-wears-facial-mask" alt="relaxed-person-wears-facial-mask">
+                        <div id="article-padding">
+                            <h3>Natural care for healthy facial skin</h3>
+                            <p>A healthy lifestyle should start from now and also for your skin health.
+                                There are some...
+                            </p>
+                            <a href="#">
+                                <div>Read more</div>
+                                <img src="./images/right-arrow.png" title="right-pointing-arrow" alt="right-pointing-arrow">
+                            </a>
+                        </div>
+                    </article>
+                </div>
+                <a href="#" class="custom-button" id="unfilled-button">View all</a>
+            </section>
+        </main>
+        
         <footer id="testimonials-footer">
-            <section id="footer-social-section">
+            <section class="footer-social-section">
                 <nav id="footer-nav">
                     <a href="https://www.facebook.com/danacapm">FB</a>
                     <a href="https://www.instagram.com/danapetherapy/">Insta</a>
