yet another css cleanups

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <footer id="home-footer">
             <section class="footer-social-section">
-                <nav id="footer-nav">
+                <nav class="footer-nav">
                     <a href="https://www.facebook.com/danacapm">FB</a>
                     <a href="https://www.instagram.com/danapetherapy/">Insta</a>
                     <a href="https://goo.gl/maps/g9zFFCGE8av9xFwC9">Website</a>
