--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -88,7 +88,7 @@
         
         <footer id="testimonials-footer">
             <section class="footer-social-section">
-                <nav id="footer-nav">
+                <nav class="footer-nav">
                     <a href="https://www.facebook.com/danacapm">FB</a>
                     <a href="https://www.instagram.com/danapetherapy/">Insta</a>
                     <a href="https://www.b144.co.il/b144_sip/4A1404134470655D4C1600174176605B4F.aspx">Website</a>
