--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a id="current-page" href="#">Home</a>
                 <a href="#">Find a doctor</a>
                 <a href="#">Apps</a>
-                <a href="/testimonials/testimonials.html">Testimonials</a>
+                <a href="./testimonials/testimonials.html">Testimonials</a>
                 <a href="#">About us</a>
             </nav>
         </header>
