another css fixes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </section>
         </main>
 
-        <footer id="home-footer">
+        <footer id="home-footer" class="gradient-background">
             <section class="footer-social-section">
                 <nav class="footer-nav">
                     <a href="https://www.facebook.com/danacapm">FB</a>
